--- a/index.html
+++ b/index.html
@@ -1,97 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>SECUND — Own a Second Forever</title>
-  <meta name="theme-color" content="#0b0f16"/>
-  <meta name="description" content="Own your second — forever. Verified certificate • Live Winners Wall • Only €1 / £1 / 420 Ft."/>
-  <style>
-    body{background:#0b0f16;color:#e6e9ef;font-family:sans-serif;margin:0}
-    a{color:#60a5fa;text-decoration:none}
-    .container{max-width:1100px;margin:0 auto;padding:20px}
-    .btn{padding:.8rem 1.2rem;border-radius:.9rem;background:#f5c15c;color:#0b0f16;font-weight:bold;text-decoration:none;display:inline-block;margin-top:10px}
-    .wall__grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:.9rem;margin-top:1rem}
-    .tile{background:#101827;border:1px solid #1a2336;border-radius:1rem;padding:1rem}
-    .tile strong{color:#f5c15c}
-    header{margin-bottom:2rem}
-  </style>
-</head>
-<body>
-  <div class="container">
-    <header>
-      <h1 id="title">Loading...</h1>
-      <p id="price">Loading price...</p>
-      <a href="https://ko-fi.com/ownasecond/shop" class="btn" id="cta">...</a>
-      <p>
-        <a href="https://tiktok.com/@time.is.yours" target="_blank">TikTok</a> • 
-        <a href="mailto:info@ownasecond.io">info@ownasecond.io</a>
-      </p>
-    </header>
-
-    <h2 id="wallTitle">Loading...</h2>
-    <div id="winners" class="wall__grid">Loading...</div>
-  </div>
-
-  <script>
-    const translations = {
-      hu: {
-        title: "Örökíts meg egy másodpercet — örökre",
-        price: "420 Ft",
-        cta: "Vásárold meg most a Ko-Fi boltban",
-        wallTitle: "Győztesek Fal"
-      },
-      en: {
-        title: "Own your second — forever",
-        price: "€1",
-        cta: "Buy now on Ko-Fi",
-        wallTitle: "Winners Wall"
-      },
-      en_gb: {
-        title: "Own your second — forever",
-        price: "£1",
-        cta: "Buy now on Ko-Fi",
-        wallTitle: "Winners Wall"
-      },
-      es: {
-        title: "Haz tuyo un segundo — para siempre",
-        price: "1 €",
-        cta: "Cómpralo ahora en Ko-Fi",
-        wallTitle: "Muro de Ganadores"
-      }
-    };
-
-    async function loadContent(){
-      try {
-        const res = await fetch('/.netlify/functions/location');
-        const data = await res.json();
-        const lang = data.lang || "en";
-        const t = translations[lang] || translations.en;
-
-        document.getElementById('title').innerText = t.title;
-        document.getElementById('price').innerText = "Ár / Price: " + t.price;
-        document.getElementById('cta').innerText = t.cta;
-        document.getElementById('wallTitle').innerText = t.wallTitle;
-      } catch(e){
-        document.getElementById('title').innerText = "Error loading content";
-      }
-    }
-
-    async function loadWinners(){
-      try {
-        const res = await fetch('/.netlify/functions/winners');
-        const data = await res.json();
-        const container = document.getElementById('winners');
-        container.innerHTML = data.map(
-          w => `<div class="tile"><strong>#${w.id}</strong> — ${w.name}<br><span style="color:#aab3c2">${w.location} • ${w.date}</span></div>`
-        ).join('');
-      } catch(e){
-        document.getElementById('winners').innerText = "Error loading Winners Wall";
-      }
-    }
-
-    loadContent();
-    loadWinners();
-  </script>
-</body>
-</html>
+<!doctype html><html><head><meta charset='utf-8'><title>OWN A SECOND</title><link rel='stylesheet' href='style.css'></head><body><h1>Own a Second — Forever.</h1><script src='script.js'></script></body></html>
